--- a/src/components/GalleryThumb.css
+++ b/src/components/GalleryThumb.css
@@ -2,7 +2,6 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-
   box-shadow : 0 .5em 3em #ddd;
   background: #fff;;
 
@@ -14,31 +13,27 @@
   }
   .c-galleryThumb__caption h4 {
    color: #e74c3c;
-   background-color: #ecf0f1;
+   font-size: 1.15em;
   }
   .c-galleryThumb__figure {
     overflow: hidden;
   }
 
   .c-galleryThumb__figure:hover img {
-    transform : scale(1.03125) translate(-50%, -50%);
+    transform : scale(1.01) translate(-50%, -50%);
   }
 
   .c-galleryThumb__imageContainer {
     display: block;
     position: relative;
-
     overflow: hidden;
-
     height: 0;
-
     padding : 0 0 65%;
   }
 
   .c-galleryThumb__imageContainer img {
     display: block;
     position: absolute;
-
     top: 50%;
     left: 50%;
 
@@ -48,9 +43,8 @@
 
   .c-galleryThumb__title {
     font-size : 1.25em;
-
     padding : 1em 0 .5em;
   }
-.o-btnPrimary{
+.btnPrimary{
   color: #e74c3c;
 }
